actualiza PJs y ENs segun resultados

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,4 @@ spring.kafka.producer.value-serializer=org.springframework.kafka.support.seriali
 # Nombres de Topics
 app.kafka.topic.aventuras-creadas=aventuras-topic
 app.kafka.topic.participantes-listos=participantes-topic
+app.kafka.topic.combate-resultados=combate-resultados-topic
