--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,15 @@ spring.kafka.producer.value-serializer=org.springframework.kafka.support.seriali
 app.kafka.topic.aventuras-creadas=aventuras-topic
 app.kafka.topic.participantes-listos=participantes-topic
 app.kafka.topic.combate-resultados=combate-resultados-topic
+app.kafka.topic.aventura-finalizada=aventura-finalizada-topic
+
+# AWS Configuration for Local Development
+spring.cloud.aws.region.static=us-east-1
+# Apunta al endpoint de nuestro DynamoDB Local en Docker
+spring.cloud.aws.dynamodb.endpoint=http://localhost:8000
+# Usa el perfil de credenciales que creamos
+spring.cloud.aws.credentials.profile.name=default
+
+# Nombres de nuestras tablas de DynamoDB (para mantenerlos configurables)
+app.dynamodb.table-name.personajes=dndms-personajes
+app.dynamodb.table-name.enemigos=dndms-enemigos
