--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,8 +26,8 @@ app.kafka.topic.aventura-finalizada=aventura-finalizada-topic
 spring.cloud.aws.region.static=us-east-1
 # Apunta al endpoint de nuestro DynamoDB Local en Docker
 spring.cloud.aws.dynamodb.endpoint=http://localhost:8000
-# Usa el perfil de credenciales que creamos
-spring.cloud.aws.credentials.profile.name=default
+# Usa el perfil de credenciales que creamos (comentar en docker)
+#spring.cloud.aws.credentials.profile.name=default
 
 # Nombres de nuestras tablas de DynamoDB (para mantenerlos configurables)
 app.dynamodb.table-name.personajes=dndms-personajes
