--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,8 @@
             <dependency>
                 <groupId>io.awspring.cloud</groupId>
                 <artifactId>spring-cloud-aws-dependencies</artifactId>
-                <version>3.1.1</version> <type>pom</type>
+                <version>3.1.1</version> 
+                <type>pom</type>
                 <scope>import</scope>
             </dependency>
         </dependencies>
